k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-frontend
spec:
  selector:
    app: demo-frontend
  ports:
    - port: 80
      targetPort: 5151
